# ina-fibers-proj

./: .clangd  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
